--- a/app/src/main/res/layout/dong_item_monan.xml
+++ b/app/src/main/res/layout/dong_item_monan.xml
@@ -10,4 +10,11 @@
         android:layout_centerInParent="true"
         android:layout_width="200dp"
         android:layout_height="200dp" />
+    <View
+        android:background="#050505"
+        android:layout_below="@id/imageMonan"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp">
+
+    </View>
 </RelativeLayout>
